--- a/language/EN.json
+++ b/language/EN.json
@@ -81,10 +81,10 @@
             "MUST_TEXT": "```Please reply to any message```"
         },
         "heroku": {
-            "RESTART_DESC": "restart ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ",
-            "RESTART_MSG": "ʀᴇsᴛᴀʀᴛɪɴɢ ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ",
-            "SHUTDOWN_DESC": "Shutdown ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ",
-            "SHUTDOWN_MSG": "Ѕʜᴜᴛᴛɪɴɢ ᴅᴏᴡɴ ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ",
+            "RESTART_DESC": "restart Ѕᴘɪʀᴇx",
+            "RESTART_MSG": "ʀᴇsᴛᴀʀᴛɪɴɢ Ѕᴘɪʀᴇx",
+            "SHUTDOWN_DESC": "Shutdown Ѕᴘɪʀᴇx",
+            "SHUTDOWN_MSG": "Ѕʜᴜᴛᴛɪɴɢ ᴅᴏᴡɴ Ѕᴘɪʀᴇx",
             "DYNO_DESC": "Check heroku dyno usage",
             "DYNO_TOTAL": "```Total Quota```",
             "DYNO_USED": "```Quota used```",
@@ -92,7 +92,7 @@
             "DYNO_LEFT": "```Remaining```",
             "GR_DEL": "*Greetings Message Set!*\n*Type* ```.goodbye delete & .welcome delete``` *to remove!*",
             "SETVAR_DESC": "Set heroku config var",
-            "SET_SUCCESS": "ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ ѕᴜᴄᴄᴇѕѕғᴜʟʟʏ ѕᴇᴛ {} ➜ {}",
+            "SET_SUCCESS": "Ѕᴘɪʀᴇx ѕᴜᴄᴄᴇѕѕғᴜʟʟʏ ѕᴇᴛ {} ➜ {}",
             "KEY_VAL_MISSING": "```Either Key or Value is missing```",
             "INVALID": "```Invalid key:value format```",
             "GETVAR_DESC": "Get heroku config var",
@@ -198,7 +198,7 @@
             "ISONG_DESC": "Uploads the song you wrote for ios users.",
             "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* .song White Crasher Comming",
             "NO_RESULT": "*I couldn't find anything 😖*",
-            "DOWNLOADING_SONG": "ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ ɪѕ ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ",
+            "DOWNLOADING_SONG": "Ѕᴘɪʀᴇx ɪѕ ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ",
             "NAMEY": "NAME",
             "URL": "LINK",
             "THUMB": "THUMB",
@@ -206,7 +206,7 @@
             "UPLOADING_SONG": "ᴜᴘʟᴏᴀᴅɪɴɢ ѕᴏɴɢ",
             "VIDEO_DESC": "Downloads video from YouTube.",
             "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
-            "DOWNLOADING_VIDEO": "ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ ɪѕ ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ",
+            "DOWNLOADING_VIDEO": "Ѕᴘɪʀᴇx ɪѕ ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ",
             "UPLOADING_VIDEO": "ᴜᴘʟᴏᴀᴅɪɴɢ ᴠɪᴅᴇᴏ",
             "LOADING": "*Downloading video*",
             "YT_DESC": "It searchs on YouTube.",
@@ -243,10 +243,10 @@
         },
         "updater": {
             "UPDATER_DESC": "Checks the update.",
-            "UPDATE": "ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ *ɪѕ ᴜᴘ ᴛᴏ ᴅᴀᴛᴇ*",
-            "NEW_UPDATE": "*New update available for* ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ\n\n  Join Our Group :-\n https://chat.whatsapp.com/KVPJ8cQw4lR9zTTFPM8mbH \n\nUPDATE:\n",
+            "UPDATE": "Ѕᴘɪʀᴇx *ɪѕ ᴜᴘ ᴛᴏ ᴅᴀᴛᴇ*",
+            "NEW_UPDATE": "*New update available for* Ѕᴘɪʀᴇx\n\n  Join Our Group :-\n https://chat.whatsapp.com/KVPJ8cQw4lR9zTTFPM8mbH \n\nUPDATE:\n",
             "UPDATE_NOW_DESC": "It makes updates.",
-            "UPDATING": "ʜᴇͧʀᷤᴍͤɪͬ† ⚚ ᴘɪⷡᴋⷪᴀⷮᴄᷤʜᴜ ɪѕ ᴜᴘᴅᴀᴛɪɴɢ \n ᴅᴜʀᴀᴛɪᴏɴ : 4 ᴍɪɴᴜᴛᴇ ᴜᴘᴅᴀᴛᴇ",
+            "UPDATING": "Ѕᴘɪʀᴇx ɪѕ ᴜᴘᴅᴀᴛɪɴɢ \n ᴅᴜʀᴀᴛɪᴏɴ : 4 ᴍɪɴᴜᴛᴇ ᴜᴘᴅᴀᴛᴇ",
             "INVALID_HEROKU": "*❌ Your Heroku app name or api key wrong!*",
             "UPDATED": "*ᴜᴘᴅᴀᴛᴇᴅ ѕᴜᴄᴇѕѕғᴜʟʟʏ*",
             "UPDATED_LOCAL": "*ᴜᴘᴅᴀᴛᴇᴅ ѕᴜᴄᴇѕѕғᴜʟʟʏ*",
