--- a/language/EN.json
+++ b/language/EN.json
@@ -4,51 +4,49 @@
     "LANGCODE": "en",
     "AUTHOR": "AsenaDev",
     "STRINGS": {
-        "julie": {
+        "_asena": {
             "EXAMPLE": "Eg:- ",
-            "NOT_FOUND": "*Not Found Bro 🧮*",
+            "NOT_FOUND": "*I couldnt find a command like this*",
             "PLKADMIN": ".report you are not admin \n\n 🇩​🇴​🇳​🇹​ 🇹​🇷​🇾​ 🇦​🇬​🇦​🇮​🇳​, 🇮​🇫​ 🇾​🇴​🇺​ 🇹​🇷​🇾​ 🇾​🇴​🇺​ 🇼​🇮​🇱​🇱​ 🇧​🇪​ 🇷​🇪​🇲​🇴​🇻​🇪​🇩​ 🇧​🇾​ 🇦​🇩​🇲​🇮​🇳​🇸​",
-            "WARN": "Warn",
-            "REVOKED": "Group Link Revoked By Admins ⚙️",
-            "REVOKE_DESC": "```Revokes group link```"
+            "WARN": "Warn"
             
         },
         "_plugin": {
             "INSTALL_DESC": "Install external plugins.",
-            "NEED_URL": "Url Avide ? 🙄",
+            "NEED_URL": "Please enter a URL! Example:",
             "UNOFF": "⚠️ *Attention!* \n*The plugin you have installed is not official!*",
-            "INVALID_URL": "Enter a Valid Url Bro🥱",
+            "INVALID_URL": "```Please enter a valid url!```",
             "INVALID_PLUGIN": "*❌ Your plugin is invalid!*\n*Error:*",
-            "INSTALLED": "*Plugin has been successfully installed!*",
+            "INSTALLED": "*✅ Plugin has been successfully installed!*",
             "PLUGIN_DESC": "Shows the plugins you have installed.",
             "INSTALLED_FROM_REMOTE": "*Plugins you install externally:*\n",
             "NO_PLUGIN": "*You have not installed any external plugins!*",
             "REMOVE_DESC": "Removes the plugin.",
             "NEED_PLUGIN": "```Please enter a Plugin! Example: .plugin __test```",
             "NOT_FOUND_PLUGIN": "```Maybe you have installed such a plugin, or maybe not. But it sure isn't right now.```",
-            "DELETED": "*Module successfully deleted!*",
+            "DELETED": "*✅ Module successfully deleted!*",
             "WARN": "Get plugins only from t.me/remasterplugin channel."
         },
         "admin": {
             "BAN_DESC": "Ban someone in the group. Reply to message or tag a person to use command.",
-            "IM_NOT_ADMIN": "*Njan Admin Alla Boss 🥲*",
-            "BANNED": "BANNED❗",
-            "GIVE_ME_USER": "*Which User Boss please mention*",
+            "IM_NOT_ADMIN": "*I am not admin in this group!*",
+            "BANNED": "kicked out of the group!",
+            "GIVE_ME_USER": "*Give me a user!*",
             "ADD_DESC": "Adds someone to the group.",
-            "ADDED": "Added Successfully",
-            "ALREADY_PROMOTED": "He Is Already An Admin 🕵🏻‍♂️",
-            "PLKADMIN": ".report you are not admin \n\n 🇩​🇴​🇳​🇹​ 🇹​🇷​🇾​ 🇦​🇬​🇦​🇮​🇳​, 🇮​🇫​ 🇾​🇴​🇺​ 🇹​🇷​🇾​ 🇾​🇴​🇺​ 🇼​🇮​🇱​🇱​ 🇧​🇪​ 🇷​🇪​🇲​🇴​🇻​🇪​🇩​ 🇧​🇾​ 🇦​🇩​🇲​🇮​🇳​🇸​",
-            "PROMOTED": ", Congrats 🧬",
+            "ADDED": "added to the group!",
+            "ALREADY_PROMOTED": "```How can I make someone admin who is already admin?```",
+            "PLKADMIN": ".report you are not admin \n\n 🇩​🇴​🇳​🇹​ 🇹​🇷​🇾​ 🇦​🇬​🇦​🇮​🇳​ 🇮​🇫​ 🇾​🇴​🇺​ 🇹​🇷​🇾​ 🇾​🇴​🇺​ 🇼​🇮​🇱​🇱​ 🇧​🇪​ 🇷​🇪​🇲​🇴​🇻​🇪​🇩​ 🇧​🇾​ 🇦​🇩​🇲​🇮​🇳​🇸​",
+            "PROMOTED": "```, admin role was given!```",
             "PROMOTE_DESC": "Makes any person an admin.",
             "DEMOTE_DESC": "Takes the authority of any admin.",
-            "ALREADY_NOT_ADMIN": "How can I make someone admin who is already admin?",
-            "DEMOTED": ", has been demoted!",
+            "ALREADY_NOT_ADMIN": "```How can I make someone admin who is already admin?```",
+            "DEMOTED": "```, has been demoted!```",
             "MUTE_DESC": "Mute the group chat. Only the admins can send a message.\n⌨️ Example: .mute & .mute 5m etc",
-            "MUTED": "*_𝙲𝙻𝙾𝚂𝙴𝙳_* 🔒",
+            "MUTED": "```Group chat muted!```",
             "UNMUTE_DESC": "Unmute the group chat. Anyone can send a message.",
-            "UNMUTED": "*_𝙾𝙿𝙴𝙽𝙴𝙳_* 🔓",
+            "UNMUTED": "```The group chat has unmuted!```",
             "INVITE_DESC": "Provides the group's invitation link.",
-            "INVITE": "Fresh Link Of This Group-"
+            "INVITE": "```Invitation link: ```"
         },
         "locate": {
             "L_DESC": "It send your location.",
@@ -81,10 +79,10 @@
             "MUST_TEXT": "```Please reply to any message```"
         },
         "heroku": {
-            "RESTART_DESC": "restart Ѕᴘɪʀᴇx",
-            "RESTART_MSG": "ʀᴇsᴛᴀʀᴛɪɴɢ Ѕᴘɪʀᴇx",
-            "SHUTDOWN_DESC": "Shutdown Ѕᴘɪʀᴇx",
-            "SHUTDOWN_MSG": "Ѕʜᴜᴛᴛɪɴɢ ᴅᴏᴡɴ Ѕᴘɪʀᴇx",
+            "RESTART_DESC": "Restart WhatsAsena",
+            "RESTART_MSG": "```Restarting...```",
+            "SHUTDOWN_DESC": "Shutdown WhatsAsena",
+            "SHUTDOWN_MSG": "```Shutting down ⛔```",
             "DYNO_DESC": "Check heroku dyno usage",
             "DYNO_TOTAL": "```Total Quota```",
             "DYNO_USED": "```Quota used```",
@@ -92,14 +90,14 @@
             "DYNO_LEFT": "```Remaining```",
             "GR_DEL": "*Greetings Message Set!*\n*Type* ```.goodbye delete & .welcome delete``` *to remove!*",
             "SETVAR_DESC": "Set heroku config var",
-            "SET_SUCCESS": "Ѕᴘɪʀᴇx ѕᴜᴄᴄᴇѕѕғᴜʟʟʏ ѕᴇᴛ {} ➜ {}",
+            "SET_SUCCESS": "Successfully set ```{} ➜ {}```",
             "KEY_VAL_MISSING": "```Either Key or Value is missing```",
             "INVALID": "```Invalid key:value format```",
             "GETVAR_DESC": "Get heroku config var",
             "DELVAR_DESC": "Delete heroku config var",
             "DEL_SUCCESS": "```{} successfully deleted```",
             "NOT_FOUND": "```no results found for this key```",
-            "SUCC": "*Successfully Setted Up* \n*Please wait a little while.*",
+            "SUCC": "*Successfully Setted Up ✅* \n*Please wait a little while.*",
             "SUCC_AF": "*To restore, use* ```default```",
             "DEGİS_NONE": "```Please Enter Any Module Name!``` \n\n*.degis afk*\n*.degis alive* << **Variables** >> \n_{pp}: You only need to use it once. Adds your profile photo to the message._ \n_{info}: Shows your status._ \n_{version}: Shows the version of the bot._ \n_{plugin}: Shows the plugin channel._\n*.degis ban*\n*.degis add*\n*.degis mute*\n*.degis unmute*\n*.degis promote*\n*.degis demote*\n*.degis welcome* \n*.degis goodbye* \n*.degis kickme*\n*.degis block*\n*.degis unblock*",
             "WR": "*Please use the modules that exists!*",
@@ -107,16 +105,14 @@
         },
         "filters": {
             "FILTER_DESC": "It adds a filter. If someone writes your filter, it send the answer. If you just write .filter, it show's your filter list.",
-            "NO_FILTER": "*There are no filters in this chat!*",
-            "FILTERS": "*There is your filters in this chat:*",
-            "NEED_REPLY": "*Please type in reply!*\n*Example:*",
-            "FILTERED": "*Successfully set* {} *to filter!*",
-            "KICK": "Kicks who uses bad words",
-            "KICK2":"fill your bad word in this",
+            "NO_FILTER": "*❌ There are no filters in this chat!*",
+            "FILTERS": "*🔎 There is your filters in this chat:*",
+            "NEED_REPLY": "*❌ Please type in reply!*\n*Example:*",
+            "FILTERED": "*✅ Successfully set* ```{}``` *to filter!*",
             "STOP_DESC": "Stops the filter you added previously.",
-            "NEED_FILTER": "*Please type a filter!*\n*Example:*",
-            "ALREADY_NO_FILTER": "*There is already no filter like this!*",
-            "DELETED": "*The filter was successfully deleted!*"
+            "NEED_FILTER": "*❌ Please type a filter!*\n*Example:*",
+            "ALREADY_NO_FILTER": "*❌ There is already no filter like this!*",
+            "DELETED": "*✅ The filter was successfully deleted!*"
         },
         "greetings": {
             "WELCOME_DESC": "It sets the welcome message. If you leave it blank it shows the welcome message.",
@@ -125,7 +121,7 @@
             "NEED_WELCOME_TEXT": "*You must write a message to set up the welcome message.*\n*Example:* ```.welcome hi && hi#how are you?```",
             "WELCOME_DELETED": "*✅ Welcome message has been deleted successfully!*",
             "WELCOME_SETTED": "*✅ Welcome message has been set successfully!*",
-            "PLKADMIN": ".report you are not admin \n\n 🇩​🇴​🇳​🇹​ 🇹​🇷​🇾​ 🇦​🇬​🇦​🇮​🇳​, 🇮​🇫​ 🇾​🇴​🇺​ 🇹​🇷​🇾​ 🇾​🇴​🇺​ 🇼​🇮​🇱​🇱​ 🇧​🇪​ 🇷​🇪​🇲​🇴​🇻​🇪​🇩​ 🇧​🇾​ 🇦​🇩​🇲​🇮​🇳​🇸​",
+            "PLKADMIN": ".report you are not admin \n\n 🇩​🇴​🇳​🇹​ 🇹​🇷​🇾​ 🇦​🇬​🇦​🇮​🇳​ 🇮​🇫​ 🇾​🇴​🇺​ 🇹​🇷​🇾​ 🇾​🇴​🇺​ 🇼​🇮​🇱​🇱​ 🇧​🇪​ 🇷​🇪​🇲​🇴​🇻​🇪​🇩​ 🇧​🇾​ 🇦​🇩​🇲​🇮​🇳​🇸​",
             "GOODBYE_DESC": "Sets the goodbye message. If you leave blank, it show's the goodbye message.",
             "NOT_SET_GOODBYE": "*You didn't set a goodbye message!*\n*To set:* ```.goodbye bye && bye#see ya```",
             "GOODBYE_ALREADY_SETTED": "*✅ Goodbye message has been set!*\n*Message:* ```",
@@ -157,7 +153,7 @@
         },
         "profile": {
             "KICKME_DESC": "It kicks you from the group you are using it in.",
-            "KICKME": "Its Time to leave",
+            "KICKME": "```Bye bye! I am going 🤠```",
             "PP_DESC": "Makes the profile photo what photo you reply.",
             "NEED_PHOTO": "*Give me a photo!*",
             "PPING": "```Setting profile photo...```",
@@ -174,9 +170,9 @@
         },
         "removebg": {
             "REMOVEBG_DESC": "Removes the background of the photos.",
-            "NEED_PHOTO": "*Pic Avide ? 🧐 Mention it*",
+            "NEED_PHOTO": "*Give me a photo!*",
             "NO_API_KEY": "*You don't have an API key!*\nYou can get it here: remove.bg.",
-            "RBGING": "Removing background... 🪚"
+            "RBGING": "```Removing background...```"
         },
         "scrapers": {
             "TRANSLATE_DESC": "It translates with Google Translate. You must reply any message.",
@@ -188,7 +184,7 @@
             "FROM": "Translated Language",
             "RESULT": "Translate",
             "DEVICE": "It shows the details of requested devices",
-            "TRANSLATE_ERROR": "An error occured while translating!*",
+            "TRANSLATE_ERROR": "❌ An error occured while translating!*",
             "CURRENCY_ERROR": "```Syntax error! Example: .currency 1 TRY USD```",
             "INVALID_CURRENCY": "```Foreign currency transaction failed. You wrote wrong currency!```",
             "UNKNOWN_ERROR": "```An error occurred. Foreign currency transaction failed!```",
@@ -196,32 +192,32 @@
             "TTS_ERROR": "```Error, Speech example of your sentence couldn't be made!```",
             "SONG_DESC": "Uploads the song you wrote.",
             "ISONG_DESC": "Uploads the song you wrote for ios users.",
-            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* .song White Crasher Comming",
-            "NO_RESULT": "*I couldn't find anything 😖*",
-            "DOWNLOADING_SONG": "Ѕᴘɪʀᴇx ɪѕ ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ",
+            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song eminem - rap god```",
+            "NO_RESULT": "*I couldn't find anything :(*",
+            "DOWNLOADING_SONG": "Downloading",
             "NAMEY": "NAME",
             "URL": "LINK",
             "THUMB": "THUMB",
             "RATING": "RATING",
-            "UPLOADING_SONG": "ᴜᴘʟᴏᴀᴅɪɴɢ ѕᴏɴɢ",
+            "UPLOADING_SONG": "*Uploading*",
             "VIDEO_DESC": "Downloads video from YouTube.",
-            "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
-            "DOWNLOADING_VIDEO": "Ѕᴘɪʀᴇx ɪѕ ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ",
-            "UPLOADING_VIDEO": "ᴜᴘʟᴏᴀᴅɪɴɢ ᴠɪᴅᴇᴏ",
+            "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://youtu.be/Lv4gYo6Ss2o```",
+            "DOWNLOADING_VIDEO": "*Downloading*",
+            "UPLOADING_VIDEO": "*Uploading*",
             "LOADING": "*Downloading video*",
             "YT_DESC": "It searchs on YouTube.",
-            "NEED_WORDS": "Type Something 🥴",
-            "GETTING_VIDEOS": "Bringing Similar Links Of your Search",
-            "NOT_FOUND": "*I couldn't find anything 😔*",
-            "SEARCHING": "*Searching...*",
+            "NEED_WORDS": "```Please write a few words!```",
+            "GETTING_VIDEOS": "```I'm bringing videos...```",
+            "NOT_FOUND": "*I couldn't find anything :(*",
+            "SEARCHING": "* 🔎 Searching...*",
             "WIKI_DESC": "Searches query on Wikipedia.",
             "IMG_DESC": "Searches for related pics on Google.",
-            "IMG": "Uploading photo {} number {} 😁..."
+            "IMG": "Uploading photo ```{}``` number ```{} ```..."
         },
         "sticker": {
             "STICKER_DESC": "It converts your replied photo or video to sticker.",
-            "NEED_REPLY": "*Bro Reply the Video/image And Type .sticker 😇*",
-            "DOWNLOADING": "*_Converting..🧭_*"
+            "NEED_REPLY": "*Reply to a photo or video!*",
+            "DOWNLOADING": "```Wait Your Media Converting To Sticker💖```"
         },
         "system_stats": {
             "ALIVE_DESC": "Does bot work?",
@@ -237,20 +233,20 @@
             "PLKADMIN": ".report you are not admin \n\n 🇩​🇴​🇳​🇹​ 🇹​🇷​🇾​ 🇦​🇬​🇦​🇮​🇳​, 🇮​🇫​ 🇾​🇴​🇺​ 🇹​🇷​🇾​ 🇾​🇴​🇺​ 🇼​🇮​🇱​🇱​ 🇧​🇪​ 🇷​🇪​🇲​🇴​🇻​🇪​🇩​ 🇧​🇾​ 🇦​🇩​🇲​🇮​🇳​🇸​",
             "TAGADMİN": "Tags group admins.",
             "REPORT": "Sends reports to group admins.",
-            "USER": "Admins He is making Problem Here \n\n*User:* ",
-            "REASON": "\n*Reason:* ",
+            "USER": "*===== Warning ⚠️ =====*\n\n*User:* ",
+            "REASON": "\n*Warn 👉 :* ",
             "REPLY": "*Please Respond to User's Message to Report!*"
         },
         "updater": {
             "UPDATER_DESC": "Checks the update.",
-            "UPDATE": "Ѕᴘɪʀᴇx *ɪѕ ᴜᴘ ᴛᴏ ᴅᴀᴛᴇ*",
-            "NEW_UPDATE": "*New update available for* Ѕᴘɪʀᴇx\n\n  Join Our Group :-\n https://chat.whatsapp.com/KVPJ8cQw4lR9zTTFPM8mbH \n\nUPDATE:\n",
+            "UPDATE": "*Your bot is completely up-to-date!*",
+            "NEW_UPDATE": "*New update available for Bot!*\n\n*To update Bot give this command: .update now*\n\n*Join This Group Before Updating*\n*https://chat.whatsapp.com/DY648JIMzr9FwXpy1EsYhd*\n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
-            "UPDATING": "Ѕᴘɪʀᴇx ɪѕ ᴜᴘᴅᴀᴛɪɴɢ \n ᴅᴜʀᴀᴛɪᴏɴ : 4 ᴍɪɴᴜᴛᴇ ᴜᴘᴅᴀᴛᴇ",
+            "UPDATING": "Updating..💖",
             "INVALID_HEROKU": "*❌ Your Heroku app name or api key wrong!*",
-            "UPDATED": "*ᴜᴘᴅᴀᴛᴇᴅ ѕᴜᴄᴇѕѕғᴜʟʟʏ*",
-            "UPDATED_LOCAL": "*ᴜᴘᴅᴀᴛᴇᴅ ѕᴜᴄᴇѕѕғᴜʟʟʏ*",
-            "AFTER_UPDATE": "*ᴀᴜᴛᴏ ʀᴇѕᴛᴀʀᴛ ᴏɴ ᴘʀᴏɢʀᴇѕѕ*",
+            "UPDATED": "*Updated ✅️*",
+            "UPDATED_LOCAL": "*✅ Updated!*",
+            "AFTER_UPDATE": "*Wait Helena Restarting ✅️*",
             "IN_AF": "*Please check* ```HEROKU_APP_NAME``` *and* ```app name``` *They must be same.*\n*If these two values ​​are the same, please restore* ```HEROKU_API_KEY```\n\n_To access these settings, use Heroku >> App >> Settings >> Reavel Config Vars_\n_To renew your API key, follow these steps, Heroku >> Account >> API Key then replace old api key in config vars._"
         },
         "whois": {
@@ -284,7 +280,7 @@
             "APK_MOD": "It sends some special mod apks",
             "CARBON_DESC": "It sends carbon picture",
             "TEMP": "Temperature",
-            "BOT_DESC": "Chat with bot.\n Use .molu <message>",
+            "BOT_DESC": "Chat with Pinky.\n Use .molu <message>",
             "BOT": ":",
             "DEVICE": "It shows the details of device",
             "DESC": "Description",
@@ -308,12 +304,12 @@
         },
         "conventer": {
             "MP4TOAUDİO_DESC": "Converts video to sound.",
-            "MP4TOAUDİO_NEEDREPLY": "*Bro Reply the Video And Type .mp3 😇*",
-            "MP4TOAUDİO": "Converting Video to Audio... ⚙️",
+            "MP4TOAUDİO_NEEDREPLY": "*You Must Reply to a Video!*",
+            "MP4TOAUDİO": "```Converting Video to Audio..```",
             "ANİM_STİCK": "Converts animated stickers to video.",
             "ANİMATE": "```Converting Animated Sticker To Video..```",
             "STİCKER_DESC": "Converts the sticker to a photo.",
-            "STİCKER_NEEDREPLY": "*Bro Reply the Video/image And Type .sticker 😇*",
+            "STİCKER_NEEDREPLY": "*You Must Reply to a sticker!*",
             "STİCKER": "```Converting the sticker to a photo..```",
             "XMEDİA_DESC": "It is a plugin with more than 25 media tools.",
             "T_FALSE": "```❌ Incorrect Blend Effect Entered!```\n```🔎 Existing Commands:```\n\n*$dodge* - Applies a pink color filter to the video.\n*$multiply* - Applies a green color filter to the video.\n*$grainmerge* - Increases the contrast of the video.\n*$and* - Applies black lightning effect according to the speed of the video.\n*$or* - Applies a white lightning effect according to the speed of the video.\n*$burn* - Applies green contrast to video.\n*$difference* - Shows the differences by applying green relief to the video.\n*$grainextract* - Shows the differences by applying gray relief to the video.\n*$divide* - Demonstrates the differences by applying a pink relief to the video.\n*$xor* - Applies both green relief and lightning effect to video.\n*$hardmix* - Mixes the colors of the video into a yellow and red tone.\n*$negation* - Turns the dynamics of the video to pink.",
@@ -470,7 +466,7 @@
             "SAVE_USAGE": "Reply a message and type .save or just use .save <Your note> without replying",
             "REPLY": "Please provide a note or reply to a message.",
             "SUCCESSFULLY_ADDED": "Successfully added new note, check your notes with .notes.",
-            "UNSUCCESSFUL": "Could not add note, please try again later or contact Julie developers.",
+            "UNSUCCESSFUL": "Could not add note, please try again later or contact WhatsAsena developers.",
             "DELETE_USAGE": "Deletes *all* your saved notes.",
             "SUCCESSFULLY_DELETED": "Successfully deleted all your notes."
         },
