--- a/language/EN.json
+++ b/language/EN.json
@@ -31,22 +31,22 @@
             "BAN_DESC": "Ban someone in the group. Reply to message or tag a person to use command.",
             "IM_NOT_ADMIN": "*I am not admin in this group!*",
             "BANNED": "kicked out of the group!",
-            "GIVE_ME_USER": "*Give me a user!*",
+            "GIVE_ME_USER": "*Bro Please Mention a User 〄*",
             "ADD_DESC": "Adds someone to the group.",
             "ADDED": "added to the group!",
-            "ALREADY_PROMOTED": "```How can I make someone admin who is already admin?```",
+            "ALREADY_PROMOTED": "Boss He is Already An Admin 〄",
             "PLKADMIN": ".report you are not admin \n\n 🇩​🇴​🇳​🇹​ 🇹​🇷​🇾​ 🇦​🇬​🇦​🇮​🇳​ 🇮​🇫​ 🇾​🇴​🇺​ 🇹​🇷​🇾​ 🇾​🇴​🇺​ 🇼​🇮​🇱​🇱​ 🇧​🇪​ 🇷​🇪​🇲​🇴​🇻​🇪​🇩​ 🇧​🇾​ 🇦​🇩​🇲​🇮​🇳​🇸​",
-            "PROMOTED": "```, admin role was given!```",
+            "PROMOTED": ", congrats u r now an Admin 〄",
             "PROMOTE_DESC": "Makes any person an admin.",
             "DEMOTE_DESC": "Takes the authority of any admin.",
-            "ALREADY_NOT_ADMIN": "```How can I make someone admin who is already admin?```",
-            "DEMOTED": "```, has been demoted!```",
+            "ALREADY_NOT_ADMIN": "Boss He is Already An Admin 〄",
+            "DEMOTED": ", has been demoted 〄",
             "MUTE_DESC": "Mute the group chat. Only the admins can send a message.\n⌨️ Example: .mute & .mute 5m etc",
-            "MUTED": "```Group chat muted!```",
+            "MUTED": "*_𝙲𝙻𝙾𝚂𝙴𝙳_* 🔒",
             "UNMUTE_DESC": "Unmute the group chat. Anyone can send a message.",
-            "UNMUTED": "```The group chat has unmuted!```",
+            "UNMUTED": "*_𝙾𝙿𝙴𝙽𝙴𝙳_* 🔓",
             "INVITE_DESC": "Provides the group's invitation link.",
-            "INVITE": "```Invitation link: ```"
+            "INVITE": "ғʀᴇѕʜ ʟɪɴᴋ:"
         },
         "locate": {
             "L_DESC": "It send your location.",
@@ -75,12 +75,12 @@
         },
         "nekobin": {
             "NEKO_DESC": "Replied messages will be added to nekobin.com.",
-            "NEED_REPLY": "```Please reply to a message!```",
-            "MUST_TEXT": "```Please reply to any message```"
+            "NEED_REPLY": "Bro Reply to the Message and type Command 〄 ",
+            "MUST_TEXT": "Bro Reply to the Message and type Command 〄 "
         },
         "heroku": {
             "RESTART_DESC": "Restart WhatsAsena",
-            "RESTART_MSG": "```Restarting...```",
+            "RESTART_MSG": " ʀᴇsᴛᴀʀᴛɪɴɢ Ѕᴘɪʀᴇx",
             "SHUTDOWN_DESC": "Shutdown WhatsAsena",
             "SHUTDOWN_MSG": "```Shutting down ⛔```",
             "DYNO_DESC": "Check heroku dyno usage",
@@ -90,9 +90,9 @@
             "DYNO_LEFT": "```Remaining```",
             "GR_DEL": "*Greetings Message Set!*\n*Type* ```.goodbye delete & .welcome delete``` *to remove!*",
             "SETVAR_DESC": "Set heroku config var",
-            "SET_SUCCESS": "Successfully set ```{} ➜ {}```",
-            "KEY_VAL_MISSING": "```Either Key or Value is missing```",
-            "INVALID": "```Invalid key:value format```",
+            "SET_SUCCESS": "sᴘɪʀᴇx sᴜᴄᴄᴇssғᴜʟʟʏ sᴇᴛ {} ➜ {}",
+            "KEY_VAL_MISSING": "ith Aathe Key 🧐",
+            "INVALID": "ith Aathe Key 🧐",
             "GETVAR_DESC": "Get heroku config var",
             "DELVAR_DESC": "Delete heroku config var",
             "DEL_SUCCESS": "```{} successfully deleted```",
@@ -170,9 +170,9 @@
         },
         "removebg": {
             "REMOVEBG_DESC": "Removes the background of the photos.",
-            "NEED_PHOTO": "*Give me a photo!*",
-            "NO_API_KEY": "*You don't have an API key!*\nYou can get it here: remove.bg.",
-            "RBGING": "```Removing background...```"
+            "NEED_PHOTO": "*Photo Avide Mention Chey 🧐*",
+            "NO_API_KEY": "*Abru Broyode Api Key!*\nVekkan para: remove.bg.",
+            "RBGING": "ʀᴇᴍᴏᴠɪɴɢ ʙᴀᴄᴋɢʀᴏᴜɴᴅ 〄"
         },
         "scrapers": {
             "TRANSLATE_DESC": "It translates with Google Translate. You must reply any message.",
@@ -192,7 +192,7 @@
             "TTS_ERROR": "```Error, Speech example of your sentence couldn't be made!```",
             "SONG_DESC": "Uploads the song you wrote.",
             "ISONG_DESC": "Uploads the song you wrote for ios users.",
-            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song eminem - rap god```",
+            "NEED_TEXT_SONG": "*Bro Write a song name *\n*Example:* .song White crasher Comming",
             "NO_RESULT": "*I couldn't find anything :(*",
             "DOWNLOADING_SONG": "Downloading",
             "NAMEY": "NAME",
@@ -201,23 +201,23 @@
             "RATING": "RATING",
             "UPLOADING_SONG": "*Uploading*",
             "VIDEO_DESC": "Downloads video from YouTube.",
-            "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://youtu.be/Lv4gYo6Ss2o```",
-            "DOWNLOADING_VIDEO": "*Downloading*",
-            "UPLOADING_VIDEO": "*Uploading*",
+            "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://youtu.be/EyfVigi2GUw```",
+            "DOWNLOADING_VIDEO": "*ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ ᴠɪᴅᴇᴏ*",
+            "UPLOADING_VIDEO": "*ᴜᴘʟᴏᴀᴅɪɴɢ*",
             "LOADING": "*Downloading video*",
             "YT_DESC": "It searchs on YouTube.",
             "NEED_WORDS": "```Please write a few words!```",
             "GETTING_VIDEOS": "```I'm bringing videos...```",
-            "NOT_FOUND": "*I couldn't find anything :(*",
+            "NOT_FOUND": "*ɴᴊᴀɴ ɴᴏᴋᴋɪ ᴏɴɴᴜᴍ ᴋᴀɴᴅɪʟʟᴀ 😒*",
             "SEARCHING": "* 🔎 Searching...*",
             "WIKI_DESC": "Searches query on Wikipedia.",
             "IMG_DESC": "Searches for related pics on Google.",
-            "IMG": "Uploading photo ```{}``` number ```{} ```..."
+            "IMG": "ᴜᴘʟᴏᴀᴅɪɴɢ ᴘʜᴏᴛᴏs {} number {} ..."
         },
         "sticker": {
             "STICKER_DESC": "It converts your replied photo or video to sticker.",
-            "NEED_REPLY": "*Reply to a photo or video!*",
-            "DOWNLOADING": "```Wait Your Media Converting To Sticker💖```"
+            "NEED_REPLY": "*Bro Reply to a image/video and Type  .sticker 😇*",
+            "DOWNLOADING": "Converting To Sticker 〄"
         },
         "system_stats": {
             "ALIVE_DESC": "Does bot work?",
@@ -240,13 +240,13 @@
         "updater": {
             "UPDATER_DESC": "Checks the update.",
             "UPDATE": "*Your bot is completely up-to-date!*",
-            "NEW_UPDATE": "*New update available for Bot!*\n\n*To update Bot give this command: .update now*\n\n*Join This Group Before Updating*\n*https://chat.whatsapp.com/DY648JIMzr9FwXpy1EsYhd*\n\nChanges:\n```",
+            "NEW_UPDATE": "*New update available for Bot!*\n\n*To update Bot give this command: .update now*\n\n*Join This Group Before Updating*\n*https://chat.whatsapp.com/KVPJ8cQw4lR9zTTFPM8mbH*\n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
-            "UPDATING": "Updating..💖",
+            "UPDATING": "Ѕᴘɪʀᴇx ᴜᴘᴅᴀᴛɪɴɢ 〄",
             "INVALID_HEROKU": "*❌ Your Heroku app name or api key wrong!*",
-            "UPDATED": "*Updated ✅️*",
-            "UPDATED_LOCAL": "*✅ Updated!*",
-            "AFTER_UPDATE": "*Wait Helena Restarting ✅️*",
+            "UPDATED": "*ᴜᴘᴅᴀᴛᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ*",
+            "UPDATED_LOCAL": "* Updated!*",
+            "AFTER_UPDATE": "*ᴀᴜᴛᴏ ʀᴇsᴛᴀʀᴛ ᴏɴ ᴘʀᴏɢʀᴇss*",
             "IN_AF": "*Please check* ```HEROKU_APP_NAME``` *and* ```app name``` *They must be same.*\n*If these two values ​​are the same, please restore* ```HEROKU_API_KEY```\n\n_To access these settings, use Heroku >> App >> Settings >> Reavel Config Vars_\n_To renew your API key, follow these steps, Heroku >> Account >> API Key then replace old api key in config vars._"
         },
         "whois": {
